# hfs

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
CopyHFSMeta/: Data.h  DeviceWrapper.c  Gather.c  ScanExtents.c  Sparse.h  SparseBundle.c  dump.c  hfsmeta.h  main.c  misc.c
hfs.xcodeproj/: project.pbxproj
hfs_japanese/: Info.plist  Makefile  Makefile.in
hfs_japanese/hfs_japanese.kmodproj/: Makefile  Makefile.in
hfs_util/: hfs_util.h  hfsutil_jnl.c  hfsutil_main.c
m4/: EbgMacOSXOptions.m4
